--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_layout.scss
@@ -3,6 +3,10 @@
   background: #fff;
 }
 
+.btn-outline-white {
+  @include button-outline-variant(#fff);
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
