--- a/projects/kiwi-suite/ngx-admin/src/lib/views/media/edit/media-edit.component.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/media/edit/media-edit.component.scss
@@ -55,4 +55,13 @@
       }
     }
   }
+
+  @include media-breakpoint-down(sm) {
+    display: block;
+
+    .entity-list {
+      width: auto;
+      padding: 0 5px 5px;
+    }
+  }
 }
