--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_sitemap.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_sitemap.scss
@@ -59,6 +59,12 @@
     font-size: .9em;
   }
 
+  .sitemap-item-handle {
+    font-size: .8rem;
+    color: #aaa;
+    margin: 0 5px;
+  }
+
   .sitemap-item-icons {
     padding: 0 10px;
   }
