--- a/projects/kiwi-suite/ngx-admin/src/scss/custom/_sitemap.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/custom/_sitemap.scss
@@ -68,8 +68,35 @@
   .sitemap-item-icons {
     padding: 0 10px;
   }
+
+  .page-type-info {
+    opacity: .4;
+    font-size: .8em;
+  }
+}
+
+.sitemap-insert-btn {
+  border: 1px dashed #ddd;
+  background: #f9f9f9;
+  text-align: center;
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+  color: #aaa;
+  font-size: .7rem;
+  padding: 2px 10px;
+
+  &.as-child {
+    width: calc(100% - 25px);
+    margin-left: 25px;
+  }
+
+  &:hover {
+    border-color: $primary;
+    color: $primary;
+  }
 }
 
 .sitemap-sub-item {
-  padding-left: 20px;
+  padding-left: 25px;
 }
