--- a/projects/kiwi-suite/ngx-admin/src/lib/views/media/edit/media-edit.component.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/media/edit/media-edit.component.scss
@@ -44,6 +44,10 @@
         }
       }
 
+      &.not-cropable {
+        opacity: .3;
+      }
+
       .entity-name {
         font-weight: bold;
       }
